Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0, 5.2.1
-
None
-
qtdeclarative: f9bafac9ef22f3c6962c85de7dbc8c3d177de625
Description
Run the attached (my.qml) example.
You will see that the TextInput is not correctly baseline aligned, while all the other items are aligned.
It seems that the baselineOffset is 0, which is the uninitialized value.
Attachments
Issue Links
- relates to
-
QTBUG-36529 TextFieldStyle messes up TextField.baseline
-
- Closed
-