Fixed wrong baseline alignment for TextInput

[ChangeLog][QtQuick][Fixed wrong baseline alignment for TextInput]

Task-number: QTBUG-36749
Change-Id: I6920fb0681f30d9e9943d1bd01f76cc3ae204f30
Reviewed-by: Alan Alpert <aalpert@blackberry.com>